[package]
name = "qtrust"
version = "0.1.0"
authors = ["pshu <pishu.spf@antfin.com>"]
description = "TUN/TAP interface wrapper"
documentation = "https://docs.rs/tun-tap"


[features]
default = ["tokio"]
tokio = ["futures", "libc", "mio", "tokio-core"]

[build-dependencies]
cc = "~1"

[dependencies]
mac_utun = "0.6"
futures = { version = "~0.1", optional = true }
libc = { version = "~0.2", optional = true }
mio = { version = "~0.6", optional = true }
tokio-core = { version = "~0.1", optional = true }
etherparse = "0.9.0"
packet = "0.1"
qr2term = "0.2.1"
opencv = {version = "0.43", default-features = false, features = ["opencv-34","buildtime-bindgen"]}
bardecoder = "0.2.2"
image = "0.22"




[dev-dependencies]
version-sync = "~0.5"
